; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_set.c_compare_set_qsort.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_set.c_compare_set_qsort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_variable = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_set_qsort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_set_qsort(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_variable*, align 8
  %6 = alloca %struct.sway_variable*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to i8**
  %9 = load i8*, i8** %8, align 8
  %10 = bitcast i8* %9 to %struct.sway_variable*
  store %struct.sway_variable* %10, %struct.sway_variable** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = bitcast i8* %11 to i8**
  %13 = load i8*, i8** %12, align 8
  %14 = bitcast i8* %13 to %struct.sway_variable*
  store %struct.sway_variable* %14, %struct.sway_variable** %6, align 8
  %15 = load %struct.sway_variable*, %struct.sway_variable** %6, align 8
  %16 = getelementptr inbounds %struct.sway_variable, %struct.sway_variable* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @strlen(i32 %17)
  %19 = load %struct.sway_variable*, %struct.sway_variable** %5, align 8
  %20 = getelementptr inbounds %struct.sway_variable, %struct.sway_variable* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @strlen(i32 %21)
  %23 = sub nsw i32 %18, %22
  ret i32 %23
}

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
